# imagefield

./: .gitignore  CMakeLists.txt  README.MD  cxxflags.cmake
cmake/: compile-ndk-clang-ninja-no-pch.bat  compile-ndk-clang-no-pch.bat  compile-ndk-clang-unity.bat  compile-ndk-clang.bat  compile-ninja-no-pch.bat  compile-ninja-unity.bat  compile-ninja.bat  gen-msvc17-x64-no-pch.bat  gen-msvc17-x64-unity.bat  gen-msvc17-x64.bat  run-tests-msvc17-x64.bat
ext/: CMakeLists.txt  boost.cmake
ext/earcut.hpp/: CMakeLists.txt
ext/earcut.hpp/include/mapbox/: earcut.hpp
ext/stb/: CMakeLists.txt
ext/stb/detail/: stb.c
sandboxes/: CMakeLists.txt
sandboxes/cli-sandbox/: CMakeLists.txt  main.cpp  pch.hpp
src/: CMakeLists.txt
src/core/: CMakeLists.txt
src/core/detail/: ColorSpace.cpp  DataFlow.cpp  EventLoop.cpp  GraphExecutor.cpp  GraphNode.cpp  GraphNodeFactory.cpp  Image.cpp  Region.cpp  RuntimeFactory.cpp  ThreadPool.cpp  log-device-std.cpp  log.cpp  pixel_transform.cpp  unique_id_t.cpp
src/core/detail/node/: PlaceholderNode.cpp  SinkNode.cpp
src/core/include/imf/core/: BoundingBox.hpp  ColorSpace.hpp  ComponentMapping.hpp  DataFlow.hpp  EvaluationContext.hpp  EventLoop.hpp  ExecutionPlan.hpp  GraphExecutor.hpp  GraphNode.hpp  GraphNodeFactory.hpp  IBackendOperation.hpp  IGraphCompiler.hpp  IRuntime.hpp  ITexture.hpp  Image.hpp  Region.hpp  Registers.hpp  RuntimeFactory.hpp  SamplerDesc.hpp  TextureFormat.hpp  ThreadPool.hpp  TypeID.hpp  TypeQualifier.hpp  core.hpp  function_traits.hpp  glm.hpp  iterator_range.hpp  log.hpp  operand.hpp  pch.hpp  pixel_transform.hpp  type_id.hpp  unique_id_t.hpp  vector_cast.hpp
src/core/include/imf/core/node/: PlaceholderNode.hpp  SinkNode.hpp
src/glm/: CMakeLists.txt
src/glm/include/imf/core/: glm.hpp
src/node/: CMakeLists.txt
src/node/detail/: AffineTransformNode.cpp  BicubicUpscaleNode.cpp  ColorSpaceConvertNode.cpp  FunctorNode.cpp  GaussianBlurNode.cpp  ReferenceNode.cpp  TransformNode.cpp  register_standard_graph_nodes.cpp
src/node/include/imf/core/node/: ChildGraphBase.hpp  FunctorNode.hpp  GraphNodeBase.hpp  ReferenceNode.hpp  node.hpp  pch.hpp
src/runtime/: CMakeLists.txt
src/runtime/cpu/: CMakeLists.txt
src/runtime/cpu/detail/: CpuOperationFactory.cpp  CpuOperationFactory.hpp  CpuRuntime.cpp  CpuSampler.cpp  CpuSampler.hpp  CpuTexture.cpp  NaiveGraphCompiler.cpp  NaiveGraphCompiler.hpp  Rasterizer.hpp
src/runtime/cpu/detail/operations/: CpuBicubicUpscale.cpp  CpuColorSpaceConvert.cpp  CpuFunctor.cpp  CpuGaussianBlur1D.cpp  CpuMove.cpp  CpuTransform.cpp
src/runtime/cpu/include/imf/runtime/cpu/: CpuRuntime.hpp  CpuSampler.hpp  CpuTexture.hpp  pch.hpp
tests/: CMakeLists.txt  master-test-suite.cpp
tests/test-suits/: CMakeLists.txt
tests/test-suits/detail/: basic-test-suite.cpp  cpu-rasterizer-suite.cpp
tests/test-suits/include/imf/tests/: pch.hpp
